@@ -1,5 +1,9 @@
 2003-10-27  John Levon  <levon@movementarian.org>
 
+	* doc/oprofile.xml: document opcontrol --image=
+
+2003-10-27  John Levon  <levon@movementarian.org>
+
 	* daemon/opd_events.h:
 	* daemon/opd_events.c: move code for handling
 	event descriptions here, and share find_counter_event(),
